kubernetes/examples/rbac.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ingress-whitelister
  labels:
    name: ingress-whitelister
    tier: controller
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: ingress-whitelister
        tier: controller
    spec:
      serviceAccountName: ingress-whitelister
      containers:
        - image: k911/ingress-whitelister:v1.0.0
          imagePullPolicy: IfNotPresent
          args:
            - --configmap=default/ingress-whitelister
            - --whitelist-annotation=ingress-whitelister.ingress.kubernetes.io/whitelist-name
            - --whitelist-source-ranges-annotation=ingress-whitelister.ingress.kubernetes.io/whitelist-source-range
            - --kubeconfig=
            - --master=
            - --v=10
          name: ingress-whitelister
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 30m
              memory: 64Mi
